# fft

./: .gitignore  CMakeLists.txt  README.md  a.out  butil.hpp  extracting_piano_notes.ipynb  fft.cpp  fft.py  fft_copy.cpp  fft_upcpp.cpp  iterative_fft.cpp  job_fft_upcpp  main_fftw  main_fftw.cpp  piano_frequencies.json  requirements.txt  requirements_legacy.txt  test.py  visualizing_fft.ipynb
.ipynb_checkpoints/: visualizing_fft-checkpoint.ipynb
nucknack/: a.out  fft_omp.cpp  fft_omp_naive.cpp  naive_times.txt  not_iter_fft_omp.cpp  omp_fft  test.cpp  toy.cpp
